Update EELS notebooks

--- a/EELS/EELS_analysis_complete.ipynb
+++ b/EELS/EELS_analysis_complete.ipynb
@@ -63,7 +63,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib notebook"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,7 +79,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import hyperspy.api as hs"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,7 +95,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = hs.load(\"datasets/LSMO_STO_linescan.hdf5\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,7 +111,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,7 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "s.plot()\n",
+    "s.remove_background()"
    ]
   },
   {
@@ -142,8 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "roi = hs.roi.SpanROI(left=450, right=600)\n",
+    "s.plot()\n",
+    "roi.add_widget(s, axes=[\"Energy loss\"])"
    ]
   },
   {
@@ -158,14 +168,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ti = s.isig[roi].integrate1D(axis=\"Energy loss\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ti.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,21 +197,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = hs.load(\"datasets/LSMO_STO_linescan.hdf5\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ti = s.remove_background(signal_range=(405., 448.)).isig[448.:480.].integrate1D(axis=\"Energy loss\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ti.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,14 +238,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll = hs.load(\"datasets/LSMO_STO_linescan_low_loss.hdf5\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = hs.load(\"datasets/LSMO_STO_linescan.hdf5\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +265,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = s.isig[:825.]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +281,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s.metadata"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,7 +299,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,7 +315,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll.align_zero_loss_peak(subpixel=True, also_align=[s])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,7 +331,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,7 +347,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s.add_elements(('Mn','O','Ti'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,7 +363,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s.metadata"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -341,7 +379,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m = s.create_model(ll=s_ll)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -357,7 +397,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.components"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -371,7 +413,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.multifit(kind='smart')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -385,7 +429,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -399,14 +445,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "edges = (\"Ti_L3\", \"Mn_L3\", \"O_K\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hs.plot.plot_spectra([m[edge].intensity.as_signal(\"std\") for edge in edges], legend=edges)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -421,7 +471,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "m.plot()\n",
+    "m.enable_adjust_position()"
    ]
   },
   {
@@ -436,7 +487,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.components.O_K.onset_energy.value = 528"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,7 +503,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.components.O_K.onset_energy.assign_current_value_to_all()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -466,7 +521,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.components.Mn_L3.onset_energy.value"
+   ]
   },
   {
    "cell_type": "code",
@@ -474,7 +531,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "m.components.Mn_L3.onset_energy.value = 638.5\n",
+    "m.components.Mn_L3.onset_energy.assign_current_value_to_all()"
    ]
   },
   {
@@ -490,7 +548,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.enable_fine_structure()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -504,7 +564,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.multifit(kind='smart')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -522,7 +584,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -536,14 +600,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "edges = (\"Ti_L3\", \"Mn_L3\", \"O_K\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hs.plot.plot_spectra([m[edge].intensity.as_signal() for edge in edges], legend=edges)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -559,27 +627,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Use `multifit` with `bounded=True` and `optimizer=\"lm\"` to do this model fitting"
+    "m.components.Mn_L3.intensity.bmin = 0.0"
    ]
   },
   {
@@ -587,7 +636,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.components.Ti_L3.intensity.bmin = 0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.components.O_K.intensity.bmin = 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use `multifit` with `bounded=True` and `fitter=\"lm\"` to do this model fitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.multifit(optimizer=\"lm\", kind='smart', bounded=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -601,14 +677,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.plot()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hs.plot.plot_spectra([m[edge].intensity.as_signal() for edge in edges], legend=edges)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -631,7 +711,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = hs.load(\"datasets/LSMO_linescan.hdf5\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -645,7 +727,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -659,7 +743,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll = hs.load(\"datasets/LSMO_linescan_low_loss.hdf5\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -673,7 +759,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -687,7 +775,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll.align_zero_loss_peak(also_align=[s])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -703,7 +793,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_ll.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -717,7 +809,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_thickness = s_ll.estimate_thickness(threshold=3.0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -741,7 +835,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_thickness.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -757,7 +853,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "s.plot()\n",
+    "s.remove_background()"
    ]
   },
   {
@@ -779,7 +876,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_deconvolved = s.fourier_ratio_deconvolution(s_ll)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -793,7 +892,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s_deconvolved.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -817,7 +918,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "s.plot()\n",
+    "s.crop_signal1D()"
    ]
   },
   {
@@ -834,7 +936,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m = s.create_model(ll=s_ll, auto_background=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -848,7 +952,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.components"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -862,7 +968,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1 = hs.model.components1D.Gaussian()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -876,7 +984,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.append(g1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -890,7 +1000,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.components"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -905,7 +1017,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "m.plot()\n",
+    "m.fit_component(g1)"
    ]
   },
   {
@@ -920,7 +1033,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -936,14 +1051,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g2 = hs.model.components1D.Gaussian()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.append(g2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -959,7 +1078,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.fit_component(g2, signal_range=(535., 541.), only_current=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -973,7 +1094,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -988,7 +1111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "m.plot()\n",
+    "m.set_signal_range()"
    ]
   },
   {
@@ -1003,7 +1127,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.multifit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1017,7 +1143,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.reset_signal_range()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1031,7 +1159,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1045,14 +1175,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1.set_parameters_not_free()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g2.set_parameters_not_free()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1066,21 +1200,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g3 = hs.model.components1D.Gaussian()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.append(g3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.fit_component(g3, signal_range=(522., 527.), only_current=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1094,7 +1234,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.set_signal_range(520., 541.)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1108,14 +1250,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1.set_parameters_free()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g2.set_parameters_free()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1131,7 +1277,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.multifit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1145,14 +1293,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.reset_signal_range()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1168,14 +1320,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1_g3_ratio = g1.A.as_signal()/g3.A.as_signal()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1_g3_ratio.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1189,14 +1345,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1_g3_position = g1.centre.as_signal()-g3.centre.as_signal()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1_g3_position.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1210,14 +1370,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1_g3_sigma = g1.sigma.as_signal()/g3.sigma.as_signal()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g1_g3_sigma.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
