Fix typo solution.

--- a/Getting_started/01 Getting_Started_completed.ipynb
+++ b/Getting_started/01 Getting_Started_completed.ipynb
@@ -861,7 +861,7 @@
    "outputs": [],
    "source": [
     "# Use negative indices indexing to plot the two last channels:\n",
-    "hs.plot.plot_images(im.inav[0], axes_decor='off')"
+    "hs.plot.plot_images(im.inav[-2:], axes_decor='off')"
    ]
   },
   {
