--- a/STEM_simulation_workflow/open_simulation.ipynb
+++ b/STEM_simulation_workflow/open_simulation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "import hyperspy.api as hs\n",
     "import numpy as np"
    ]
