--- a/STEM_simulation_workflow/run_simulation.ipynb
+++ b/STEM_simulation_workflow/run_simulation.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "import pyprismatic as pr\n",
     "import time\n",
     "import os"
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,19 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The simulation time of Ge3Mn5_GeI_occ0.0-TDS2-tile3x3.h5 was: 00:00:22 (22.2643 s)\n",
-      "The simulation time of Ge3Mn5_GeI_occ0.1-TDS2-tile3x3.h5 was: 00:00:24 (24.8355 s)\n",
-      "The simulation time of Ge3Mn5_GeI_occ0.2-TDS2-tile3x3.h5 was: 00:00:23 (23.2471 s)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for occ in occupancy:\n",
     "    filenameAtoms = f\"{base_name}{occ}.xyz\"\n",
