--- a/STEM_simulation_workflow/run_simulation.ipynb
+++ b/STEM_simulation_workflow/run_simulation.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
     "import pyprismatic as pr\n",
     "import time\n",
     "import os"
@@ -29,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phonons = 2\n",
+    "phonons = 1\n",
     "sliceThickness = 1.26325\n",
     "tileX = tileY = 3\n",
     "tileZ = 5\n",
@@ -87,8 +86,8 @@
     "        save2DOutput=False,\n",
     "        save3DOutput=True,\n",
     "        save4DOutput=False,\n",
-    "        saveDPC_CoM=False,\n",
-    "        savePotentialSlices=True,\n",
+    "        saveDPC_CoM=True,\n",
+    "        savePotentialSlices=False,\n",
     "        integrationAngleMin=60,\n",
     "        integrationAngleMax=120,\n",
     "        transferMode=\"auto\",\n",
